<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_medidas"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_medidas_convertir"
            android:id="@+id/textView"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_metros"
            android:hint="@string/metros"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_convertir"/>

        <RadioGroup android:id="@+id/rbgGrados"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton android:id="@+id/rb_yardas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_yardas" />

            <RadioButton android:id="@+id/rb_kilometros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_kilometros" />

            <RadioButton android:id="@+id/rb_millas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_millas" />
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_resultado"
            android:hint="@string/lbl_resultado"
            android:enabled="false"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_resultado"
            android:text="@string/lbl_resultado"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_limpiar"
            android:text="@string/lbl_limpiar"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_salir"
            android:text="@string/lbl_salir"/>

    </LinearLayout>
</LinearLayout>
