<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_temperatura"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_grados_celsius"
            android:id="@+id/textView"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_grados_celsius"
            android:hint="@string/temperatura"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_convertir"/>

        <RadioGroup android:id="@+id/rbgGrados"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton android:id="@+id/rb_fahrenheit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_fahrenheit" />

            <RadioButton android:id="@+id/rb_kelvin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_kelvin" />

            <RadioButton android:id="@+id/rb_rankin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_rankin" />
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_resultado"
            android:hint="@string/lbl_resultado"
            android:enabled="false"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_resultado"
            android:text="@string/lbl_resultado"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_limpiar"
            android:text="@string/lbl_limpiar"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_salir"
            android:text="@string/lbl_salir"/>

    </LinearLayout>
</LinearLayout>
